# music-link-thing

./: Dockerfile  docker-compose.yml
frontend/: README.md  package-lock.json  package.json  svelte.config.js
frontend/src/components/: Link.svelte  TanscodeDestination.svelte
frontend/src/lib/: index.ts
frontend/src/routes/: +page.svelte  +page.ts
server/: .dockerignore  .env.example  .gitignore  Cargo.toml  Readme.md
server/migrations/2026-03-08-162339-0000_create_links/: up.sql
server/migrations/2026-03-08-165558-0000_create_links/: down.sql  up.sql
server/src/: main.rs  models.rs  schema.rs
