[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
deadpool-diesel = { version = "0.6.1", features = ["sqlite"] }
diesel = { version = "2.3.6", features = ["sqlite"] }
diesel_migrations = "2.3.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
